--- a/pages/admin-profile.html
+++ b/pages/admin-profile.html
@@ -42,7 +42,7 @@
 
 <div class="contents_block">
     <h1 class="glitch-text">プロフィール</h1>
-    <p class="update">更新 : 2024.12.08</p>
+    <p class="update">更新 : 2024.01.08</p>
 </div>
 
 
@@ -159,18 +159,18 @@
     <hr>
     <h4 class="glitch-text" id="akumanight">2024.12.17 - 悪魔のキッスpresents「悪魔Night Duel Buster」 @Spotify O-EAST</h4>
     <p>整理番号35番</p>
-    <img src="/static/img/admin/001.jpeg" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-001.jpeg" alt="" class="admin-profile-img">
     <p>
         【入場前】
         整理番号がまさかの35番と、すごくいいものを運良く抽選で手に入れたので、すごい満足いく動きできた。入場時にみんなとの集合チェキ券買えて、サイン入り色紙プレゼントのCDも買えて、トレカの購入列もすぐ5人くらい並んで買えた。
     </p>
-    <img src="/static/img/admin/002.png" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-002.png" alt="" class="admin-profile-img">
 
     <p>
         この後にトレカに並び直すのOKってスタッフさんに言われてたからもう一周並んだんだけど、ちょっと人増えてたのもあってステージからの列は少し後ろになっちゃった。結果的にはこの選択が正しかっただろうという結論になるわけなんだけれども。
         そんなで取れた場所はほぼセンターの5列目くらい。35番っていう番号からしたらちょっと後ろだけど、全然いい位置はとれてよかった。
     </p>
-    <img src="/static/img/admin/003.jpeg" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-003.jpeg" alt="" class="admin-profile-img">
     <p>
         【ライブ】
         開始のアナウンスから、ファントムシータのパフォーマンスでスタート。いつもの入場SEで入ってきて、ゾクゾクから、魔性少女、花喰み、乙女心中、おともだち、好き好き大好き、キミバツ、というセトリ。途中に2回MCがあった。撮影可能ってのもあったから一応スマホで動画撮りながら構えてたけど、そんなカメラ画質のいいスマホではないからそっちはほぼ気にせずにちゃんと見るのに神経向けてた。会場小さいし近いのもあって、みんなの表情とか、頬に垂れてる汗とかが肉眼で見えるレベル。パフォーマンスの細かさとか、怖さに対しての表現をすごく感じられてよかった。曲のアレンジも、音源とは結構違うし、ハイネの時とも変わってたり増えてたり、表現の幅が広がっているんだなって感じて良かった。
@@ -184,13 +184,13 @@
     <p>
         戦慄かなのちゃんが、可愛かった。あんな人いるんですね、映像見た時にも思ってたけど実物を見ると余計にね。あとは開演前だけど、せっかくのツーマンライブだから、その記念として悪魔のキッスのグッズも1つくらい欲しいなと思って、悪魔の角のカチューシャを買った。可愛くて良い。
     </p>
-    <img src="/static/img/admin/004.jpeg" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-004.jpeg" alt="" class="admin-profile-img">
     <p>
         【特典会】
         ライブ後少し準備時間を空けて、ファントムシータのメンバー全員とのチェキ撮影の特典会。途中で機械のトラブルとかで並んでる時間長かったな。雰囲気としてはメンバーとパーテーションで仕切られてるけどその真ん中に入ることができて、ポーズの指定をして写真撮れるって感じ。直前までポーズ迷ってたけど、シータポーズにしてもらった。定番だけどやっぱり一番それっぽくて良い。退場するときに、自作したメンバーカラーのおともだちチャーム見せたら、すごーい！かわいいー！ってリアクションもらえて嬉しかった。
     </p>
-    <img src="/static/img/admin/005.jpeg" alt="" class="admin-profile-img">
-    <img src="/static/img/admin/006.jpeg" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-005.jpeg" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-006.jpeg" alt="" class="admin-profile-img">
     <p>
         【トレカ】
         入場時に買ったトレカは、全然余裕なくてライブ終わるまで開封できなかったから、夕飯の店入ってから全部開封。上限枚数で2周したから、25×2で50枚。全15種だからコンプできるはずだと思ってたけど、結果的には1種類だけ足りなかった、まじか。
@@ -198,7 +198,7 @@
     <p>
         ただ、それが一旦どうでも良くなるくらいのこともあって、開封があと5枚くらいのところでもなちゃんと美雨ちゃんのツーショットのに直筆サイン入りのが！！人生初でのランダムでのサイン入りで推しのもなちゃんのサインが来てくれて、それも美雨ちゃんと2人でのめっちゃ可愛い写真。びっくりして、嬉しさと驚きとでちょっと息できなかった。こんなのいただけるのしあわせすぎる。本気で大切にする。
     </p>
-    <img src="/static/img/admin/007.png" alt="" class="admin-profile-img">
+    <img src="/static/img/admin/20241217-007.png" alt="" class="admin-profile-img">
     <p>
         【その他：ライブ前】
         朝から一旦会場に行って、数日前くらいからちょっと話をさせてもらってたハイネの方々数人とご一緒させてもらって、今回の物販とかが待機する必要がないってのを聞いて確定したとこからカラオケ行ってきた。結構な時間、シータとAdoちゃん中心に色々歌ってたり、休憩でMV流しながらお話してたりで楽しかった。
@@ -218,11 +218,13 @@
     <p>
         当日、始発で向かって、7時頃に到着。多分全体の500番目とかそれくらいだったんじゃないかな。9時半開場して入場、グッズ販売で先にAdoちゃんに並びつつ、同行していた友人が自分の買い物を早く終わらせていたのでシータの方は任せて買ってもらった。
     </p>
+    <img src="/static/img/admin/20241230-001.jpeg" alt="" class="admin-profile-img">
     <p>
         オフシャルグッズ受け取りとクロークを済ませて会場のステージ側へ。まだまだ全然人は入っていなくて、フォトスポットだけ少し並んでるんみたいな感じだった。</p>
     <p>
         チラッとCOSMOステージの様子みて、一般の最前だけ人いるみたいな感じ。ここからシータ終わりまでずっとステージにいる予定だったので、空いてるうちにフェス飯。台湾混ぜそば食べた。
     </p>
+    <img src="/static/img/admin/20241230-002.jpeg" alt="" class="admin-profile-img">
     <p>
         準備してステージに入って、全体の開演まで1時間半くらいとかの時点で一般エリアの3列目くらい。超いい感じ。
     </p>
@@ -243,6 +245,7 @@
         4アーティスト目「ファントムシータ」
         今回のメインの目的だったシータ。ずっと同じステージで待ってたから、前方エリアすぐ後ろの柵最前取れてて、ドセンのちょい左、最高の位置。
     </p>
+    <img src="/static/img/admin/20241230-003.jpeg" alt="" class="admin-profile-img">
     <p>
         リハ-1、5人直立でのおともだち、音の調整とかもあるはずだけど、その中での歌声、シンプルに歌声だけの感じで良かった。ついに始まるんだな、という実感。
     </p>
@@ -280,6 +283,7 @@
     <p>
         シータが終わって、あとはラストのAdoちゃんをある程度の良い位置で見れたらいいなと思っていたので、しばらく外で休憩とご飯。いくらとサーモンの親子丼。美味しかったが、やっぱフェス飯は高いな。Adoちゃんに余裕持てるくらいの想定時間までゆっくり過ごしてから、EARTHステージに移動。
     </p>
+    <img src="/static/img/admin/20241230-004.jpeg" alt="" class="admin-profile-img">
     <p>
         5アーティスト目「Eve」
         曲もそんなに知らなかったのと、立ち位置も結構後ろの方で見えなかったけど、かっこよかった。周りの人のノリに合わせて跳んだり声出したりでも楽しかった。ちょっとは聞いたことあるような曲もいくつかあった気がする。
@@ -294,4 +298,5 @@
     <p>
         最高の締めくくりで今年のCDJ2425の3日目は終了。始発で向かってから、順調にグッズ買えて、スケジュール通りにライブ見れて、ご飯も食べる時にちゃんと食べれて、素晴らしいプランだった。早起きは三文の徳どころじゃない、数万円。楽しかった。
     </p>
+    <img src="/static/img/admin/20241230-003.jpeg" alt="" class="admin-profile-img">
 </div>
