--- a/index-page.html
+++ b/index-page.html
@@ -61,6 +61,28 @@
     <p>大切な注意事項が書いてあるので、ライブに参戦予定の方は要確認です！！(公式ホームページへジャンプします。)</p>
 </div>
 
+<div class="contents_block">
+    <h3 class="glitch-text">お知らせ</h3>
+    <hr>
+    <style>
+        .notice-div {
+            margin: 10px 15px;
+        }
+    </style>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.01.08
+        <p>本サイトのドメイン「mothlamp.info」を取得しました。</p>
+    </div>
+
+    <hr>
+    <div class="link-btn-div">
+        <a href="?p=notice" class="link-btn-a">すべて見る</a>
+    </div>
+</div>
+
 <div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="?p=articles.2007-akuma-night-video"></a>
     <h3>悪魔 Night Duel Buster</h3>
