--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
     <!-- phantom-siita head update 25.01.08 -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="誘蛾灯の導き">
+    <meta property="og:title" content="誘蛾灯の導き">
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:url" content="https://mothlamp.info/">
+    <!-- <meta property="og:image" content=""> -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="誘蛾灯の導き">
+    <meta name="twitter:title" content="誘蛾灯の導き">
+    <meta name="twitter:description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
+    <meta name="twitter:url" content="https://mothlamp.info/">
+    <!-- <meta name="twitter:image" content=""> -->
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <!-- css reset -->
