--- a/index-page.html
+++ b/index-page.html
@@ -66,7 +66,7 @@
     <hr>
     <style>
         .notice-div {
-            margin: 10px 15px;
+            margin: 1% 2%;
         }
     </style>
 
