--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="誘蛾灯の導き">
     <meta property="og:title" content="誘蛾灯の導き">
+    <meta property="og:description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:url" content="https://mothlamp.info/">
-    <!-- <meta property="og:image" content=""> -->
+    <meta property="og:image" content="/static/logo/logo.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="誘蛾灯の導き">
     <meta name="twitter:title" content="誘蛾灯の導き">
     <meta name="twitter:description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
     <meta name="twitter:url" content="https://mothlamp.info/">
-    <!-- <meta name="twitter:image" content=""> -->
+    <meta name="twitter:image" content="/static/logo/logo.png">
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <!-- css reset -->
@@ -41,7 +42,7 @@
     <!-- favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/static/logo/logo-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/logo/logo-16.png">
-    <link rel="icon" href="/static/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <!-- apple -->
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
     <!-- <meta name="apple-mobile-web-app-capable" content="true"> -->
