--- a/pages/404.html
+++ b/pages/404.html
@@ -1,3 +1,5 @@
+<div id="page-title" style="display: none;">Page Not Found (404)</div>
+
 <div class="contents_block">
     <img src="/static/img/response/404 NotFound.png" alt="404">
     <p>logo: <a href="https://github.com/SAWARATSUKI/KawaiiLogos/tree/main">SAWARATSUKI/KawaiiLogos</a></p>
