--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,7 @@
 <div id="page-title" style="display: none;">本サイトについて [誘蛾灯の導き]</div>
+<div id="page-description" style="display: none;">
+    ファントムシータ非公式ファンサイト『誘蛾灯の導き』。サイト名に込めた思いを紹介します。本サイトでは、ファントムシータの魅力を深掘りするコンテンツや情報をお届けします。
+</div>
 
 <div class="contents_block">
     <h1 class="glitch-text">本サイトについて</h1>
