--- a/pages/admin-profile.html
+++ b/pages/admin-profile.html
@@ -39,6 +39,7 @@
 
 
 <div id="page-title" style="display: none;">プロフィール [tatsu]</div>
+<div id="page-description" style="display: none;">本サイト運営者のプロフィールです。</div>
 
 <div class="contents_block">
     <h1 class="glitch-text">プロフィール</h1>
