--- a/pages/articles.html
+++ b/pages/articles.html
@@ -1,4 +1,5 @@
 <div id="page-title" style="display: none;">記事一覧 [誘蛾灯の導き]</div>
+<div id="page-description" style="display: none;">「誘蛾灯の導き」にて公開している記事の一覧です。</div>
 
 <div class="contents_block">
     <h1 class="glitch-text">全記事一覧</h1>
