--- a/pages/web.html
+++ b/pages/web.html
@@ -1,4 +1,5 @@
 <div id="page-title" style="display: none;">Web記事一覧 [誘蛾灯の導き]</div>
+<div id="page-description" style="display: none;">ファントムシータに関する公開記事へのリンクをまとめています。</div>
 
 <div class="contents_block">
     <h1 class="glitch-text">Web記事一覧</h1>
