--- a/pages/notice.html
+++ b/pages/notice.html
@@ -1,4 +1,5 @@
 <div id="page-title" style="display: none;">お知らせ [誘蛾灯の導き]</div>
+<div id="page-description" style="display: none;">「誘蛾灯の導き」からのお知らせです。</div>
 
 <div class="contents_block">
     <h1 class="glitch-text">お知らせ</h1>
