--- a/pages/discord.html
+++ b/pages/discord.html
@@ -25,6 +25,7 @@
     <p>これで、Discordサーバーへの参加は完了です。</p>
     <hr>
     <p>参加したら、[🔰はじめに🔰] チャンネルを確認してください。</p>
+    <p>サーバーへの参加に当たり、同意いただく事項が記載されているので、確認次第、指定のリアクションを押すことで、各種チャンネルを見ることができるようになります。</p>
 </div>
 
 <div class="contents_block">
@@ -42,7 +43,7 @@
         <li>犯罪行為、法令違反行為、公序良俗に反する行為</li>
         <li>特定他者に対する誹謗中傷やプライバシーを侵害する行為</li>
         <li>許可のない営業活動やそれに準ずる行為</li>
-        <li>性的、暴力的、その他不快の念を抱かせる行為</li>
+        <li>性的、暴力的、その他不快感を抱かせる行為</li>
         <li>他者の著作権、商標権、その他の知的財産権を侵害する行為</li>
         <li>その他運営が不適切と判断する行為</li>
     </ul>
@@ -50,6 +51,11 @@
     <hr>
     <h3>招待</h3>
     <p>本サーバーへは、他の方を自由に招待いただけます。その際は本ページをご紹介ください。</p>
+</div>
 
-    <hr>
+<div class="contents_block">
+    <h2>ハイネ会員限定チャンネルについて</h2>
+    <p>公式ファンクラブ「ハイネ」の会員限定チャンネルにて、会員限定コンテンツについて語るためのチャンネルがあります。</p>
+    <p>サーバーへ参加後、「ハイネ認証」チャンネルを確認してください。</p>
+    <p>ただし、FCコンテンツの画像の転載や、コピペを投稿するなど、公式の権利を侵害する行為は一切禁止です。</p>
 </div>
