update about discord

--- a/index-page.html
+++ b/index-page.html
@@ -73,6 +73,14 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
+        </svg>2025.01.13
+        <p>本サイト運営による <a href="?p=discord">Discordサーバー</a> のページを作成しました。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
         </svg>2025.01.08
         <p>本サイトのドメイン「mothlamp.info」を取得しました。</p>
     </div>
