--- a/pages/about.html
+++ b/pages/about.html
@@ -54,8 +54,8 @@
 
 <div class="contents_block">
     <h3>Discord</h3>
-    <p>本サイト運営によるDiscordサーバーがあります。サイト内コンテンツの更新情報の他、ハイネの交流でも利用できたら良いなと思っています。興味がありましたら <a
-            href="https://discord.gg/eBm8PaSJhB">こちら</a> からどうぞ。</p>
+    <p>本サイト運営によるDiscordサーバーがあります。サイト内コンテンツの更新情報の他、ハイネの交流でも利用できたら良いなと思っています。興味がありましたら <a href="?p=discord">こちら</a> からどうぞ。
+    </p>
 </div>
 
 <div class="contents_block">
