--- a/pages/notice.html
+++ b/pages/notice.html
@@ -5,6 +5,15 @@
     <h1 class="glitch-text">お知らせ</h1>
 </div>
 
+<div class="contents_block" id="20250113">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.01.13
+        <p>本サイト運営による <a href="?p=discord">Discordサーバー</a> のページを作成しました。</p>
+    </div>
+</div>
+
 <div class="contents_block" id="20250108">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
