--- a/pages/discord.html
+++ b/pages/discord.html
@@ -6,14 +6,14 @@
 </div>
 
 <div class="contents_block">
-    <h2>Discordとは</h2>
+    <h2 class="glitch-text">Discordとは</h2>
     <hr>
     <p>全世界で数億人のユーザが利用している、ボイスチャット、ビデオチャット、テキストチャットが可能な無料のコミュニケーションツールです。PC,スマートフォンなどから使用できます。</p>
     <p>詳しくは<a href="https://discord.com/">こちら(Discord)</a></p>
 </div>
 
 <div class="contents_block">
-    <h2>参加方法</h2>
+    <h2 class="glitch-text">参加方法</h2>
     <hr>
     <p>Discordアカウントを作成し、アプリをダウンロードします。（無料）</p>
     <p>アプリのダウンロードは<a href="https://discord.com/download">こちら</a>。</p>
@@ -29,7 +29,7 @@
 </div>
 
 <div class="contents_block">
-    <h2>Discordサーバーについて（必読）</h2>
+    <h2 class="glitch-text">Discordサーバーについて（必読）</h2>
     <hr>
     <p>本サーバーは、「誘蛾灯の導き」管理人の @tatsu が運営するDiscordサーバーです。</p>
     <p>ファントムシータ公式、事務所、その他関連会社様とは一切関係ありません。あくまでファンによる個人運営です。</p>
@@ -54,7 +54,7 @@
 </div>
 
 <div class="contents_block">
-    <h2>ハイネ会員限定チャンネルについて</h2>
+    <h2 class="glitch-text">ハイネ会員限定チャンネルについて</h2>
     <p>公式ファンクラブ「ハイネ」の会員限定チャンネルにて、会員限定コンテンツについて語るためのチャンネルがあります。</p>
     <p>サーバーへ参加後、「ハイネ認証」チャンネルを確認してください。</p>
     <p>ただし、FCコンテンツの画像の転載や、コピペを投稿するなど、公式の権利を侵害する行為は一切禁止です。</p>
