discord index update

--- a/index-page.html
+++ b/index-page.html
@@ -75,6 +75,7 @@
             <use href="#butterfly"></use>
         </svg>2025.01.13
         <p>本サイト運営による <a href="?p=discord">Discordサーバー</a> のページを作成しました。</p>
+        <p>FC会員のみが参加し交流できるチャンネルを作成しました。</p>
     </div>
     <hr>
 
