--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XFTS3SXX5Z"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GT-NM8CV7C9"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-XFTS3SXX5Z');
+
+        gtag('config', 'GT-NM8CV7C9');
     </script>
 
     <!-- phantom-siita head update 25.01.08 -->
