--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <meta property="og:description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:url" content="https://mothlamp.info/">
-    <meta property="og:image" content="/static/logo/logo.png">
+    <meta property="og:image" content="/static/ogimg.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="誘蛾灯の導き">
     <meta name="twitter:title" content="誘蛾灯の導き">
     <meta name="twitter:description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
     <meta name="twitter:url" content="https://mothlamp.info/">
-    <meta name="twitter:image" content="/static/logo/logo.png">
+    <meta name="twitter:image" content="/static/ogimg.png">
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <!-- css reset -->
