update world filter

--- a/index-page.html
+++ b/index-page.html
@@ -93,9 +93,15 @@
 </div>
 
 <div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="?p=articles.2008-moth-to-a-flame-video"></a>
+    <h3>Moth to a flame</h3>
+    <p>ハイネの撮影した 動画/写真 まとめ</p>
+</div>
+
+<div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="?p=articles.2007-akuma-night-video"></a>
     <h3>悪魔 Night Duel Buster</h3>
-    <p>ハイネの撮影した動画まとめ</p>
+    <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
 <div class="contents_block">
