--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- js -->
     <!-- <script src="/static/js/loading.js" data-load_page="true"></script> -->
     <script src="/static/js/loading-ps.js" data-load_page="true"></script>
+    <script src="/static/js/load-contents.js"></script>
     <script src="/static/js/menu.js"></script>
     <script src="/static/js/para.js"></script>
     <script src="/static/js/pwabuttons.js"></script>
