--- a/index-page.html
+++ b/index-page.html
@@ -93,14 +93,20 @@
 </div>
 
 <div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="?p=phanart"></a>
+    <h2>ファンアート</h2>
+    <p>絵師さんによる素敵なファンアートを紹介します！</p>
+</div>
+
+<div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="?p=articles.2008-moth-to-a-flame-video"></a>
-    <h3>Moth to a flame</h3>
+    <h4>Moth to a flame</h4>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
 <div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="?p=articles.2007-akuma-night-video"></a>
-    <h3>悪魔 Night Duel Buster</h3>
+    <h4>悪魔 Night Duel Buster</h4>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
