--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- css -->
     <script>
         $('head').append('<link rel="stylesheet" type="text/css" href="/static/css/base.css?nocache=' + new Date().getTime() + '" />');
-        $('head').append('<link rel="stylesheet" type="text/css" href="/static/css/phantom-siita.css?nocache=' + new Date().getTime() + '" />');
+        $('head').append('<link rel="stylesheet" type="text/css" href="/static/css/mothlamp.css?nocache=' + new Date().getTime() + '" />');
         $('head').append('<link rel="stylesheet" type="text/css" href="/static/css/glitch-animation.css?nocache=' + new Date().getTime() + '" />');
     </script>
     <!-- favicon -->
