--- a/index-page.html
+++ b/index-page.html
@@ -73,20 +73,23 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
-        </svg>2025.01.13
-        <p>本サイト運営による <a href="?p=discord">Discordサーバー</a> のページを作成しました。</p>
-        <p>FC会員のみが参加し交流できるチャンネルを作成しました。</p>
+        </svg>2025.01.19
+        <p>ファンアートを描かれている絵師さんを紹介する <a href="?p=phanart">ファンアート集</a> のページを作成しました。</p>
+        <p><a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページを作成しました。</p>
     </div>
+
     <hr>
 
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
-        </svg>2025.01.08
-        <p>本サイトのドメイン「mothlamp.info」を取得しました。</p>
+        </svg>2025.01.13
+        <p>本サイト運営による <a href="?p=discord">Discordサーバー</a> のページを作成しました。</p>
+        <p>FC会員のみが参加し交流できるチャンネルを作成しました。</p>
     </div>
 
     <hr>
+
     <div class="link-btn-div">
         <a href="?p=notice" class="link-btn-a">すべて見る</a>
     </div>
