--- a/pages/notice.html
+++ b/pages/notice.html
@@ -5,6 +5,16 @@
     <h1 class="glitch-text">お知らせ</h1>
 </div>
 
+<div class="contents_block" id="20250119">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.01.19
+        <p>ファンアートを描かれている絵師さんを紹介する <a href="?p=phanart">ファンアート集</a> のページを作成しました。</p>
+        <p><a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページを作成しました。</p>
+    </div>
+</div>
+
 <div class="contents_block" id="20250113">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
