--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -2,6 +2,10 @@
 <div id="page-description" style="display: none;">कㄑ”‎^. .^ ੭ （あぐ）さんのイラストを紹介します！</div>
 <div id="page-ogimg" style="display: none;">https://mothlamp.info/static/img/phanart/guoxoua/000-ogimg.jpg</div>
 
+
+<script src="/static/js/phanart-popup.js"></script>
+
+
 <div class="contents_block">
     <h1 class="glitch-text" style="font-family: Meiryo, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
         कㄑ”‎^. .^ ੭</h1>
@@ -20,19 +24,19 @@
     <p>アイコンとしての使用⭕️ アイコン以外での使用❌ 自作発言❌</p>
     <div class="phanart-container">
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" class="popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" class="popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-03rinka.png" alt="凛花アイコン" class="popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-03rinka.png" alt="凛花アイコン" class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-04hisui.png" alt="灯翠アイコン" class="popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-04hisui.png" alt="灯翠アイコン" class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-05moka.png" alt="百花アイコン" class="popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-05moka.png" alt="百花アイコン" class="phanart-popup-img">
         </div>
     </div>
 </div>
@@ -40,7 +44,7 @@
 <div class="contents_block">
     <h3>フリーヘッダー</h3>
     <p>ヘッダーとしての使用⭕️ ヘッダー以外での使用❌ 自作発言❌</p>
-    <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" class="popup-img">
+    <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" class="phanart-popup-img">
     <p class="block-description">ご本人コメント</p>
     <p>使用する際はリプしてください🙇🏻‍♀️´-</p>
     <div class="tweet-container">
@@ -57,11 +61,11 @@
     </p>
     <div class="phanart-container">
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" class="popup-img"
+            <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" class="phanart-popup-img"
                 style="object-position: 50% 0%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/profile-01.png" alt="ハイネ自己紹介カード" class="popup-img"
+            <img src="/static/img/phanart/guoxoua/profile-01.png" alt="ハイネ自己紹介カード" class="phanart-popup-img"
                 style="object-position: 50% 0%; /* 左,上 */">
         </div>
     </div>
@@ -73,7 +77,7 @@
 <div class="contents_block">
     <div class="phanart-container" style="justify-content: center;">
         <div class="phanart-wrapper" style="width: 50%;">
-            <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" class="popup-img">
+            <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" class="phanart-popup-img">
         </div>
     </div>
     <p class="block-description">ご本人コメント</p>
@@ -83,34 +87,34 @@
 <div class="contents_block">
     <div class="phanart-container">
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/001.png" alt="" class="popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/001.png" alt="" class="phanart-popup-img protected-img"
                 style="object-position: 50% 10%; /* 上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/002.png" alt="" class="popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/002.png" alt="" class="phanart-popup-img protected-img"
                 style="object-position: 50% 25%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/003.png" alt="" class="popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/003.png" alt="" class="phanart-popup-img protected-img"
                 style="object-position: 100% 50%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/004.png" alt="" class="popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/004.png" alt="" class="phanart-popup-img protected-img"
                 style="object-position: 50% 0%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/005.png" alt="" class="popup-img protected-img">
+            <img src="/static/img/phanart/guoxoua/005.png" alt="" class="phanart-popup-img protected-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" class="popup-img protected-img">
+            <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" class="phanart-popup-img protected-img">
         </div>
     </div>
 </div>
 
 <div class="contents_block">
     <p class="block-description">管理人より</p>
-    <p>素敵なイラストを掲載させていただき、ありがとうございます！本サイトで紹介しているイラスト以外にも、Adoartなども投稿されているので、ぜひあぐさんの <a
-            href="https://x.com/uxwou_4">X(Twitter)@uxwou_4</a> からご覧ください！</p>
+    <p>素敵なイラストを掲載させていただき、ありがとうございます！本サイトで紹介しているイラスト以外にも、Adoartなども投稿されているので、ぜひあぐさんのX(Twitter) <a
+            href="https://x.com/uxwou_4">@uxwou_4</a> からご覧ください！</p>
 </div>
 
 <div id="phanart-modal" class="phanart-modal">
@@ -119,79 +123,3 @@
 </div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
-
-<style>
-
-</style>
-
-<script>
-    $(document).ready(function () {
-        const modal = $('#phanart-modal');          // モーダル
-        const modalImg = $('#phanart-modal-img');  // モーダル内の画像
-        const imgs = $('.popup-img');              // .popup-img クラスの画像
-        const wrapper = $('.phanart-wrapper'); // 外側の div
-        const closeSpan = $('#phanart-modal-close'); // モーダルを閉じるボタン
-
-        // モーダルを開く処理
-        function openModal(targetImg) {
-            if (targetImg.length) {
-                // モーダルを表示
-                modal.css({
-                    'opacity': '1',
-                    'visibility': 'visible'
-                });
-
-                // モーダル内に画像を表示
-                modalImg.attr('src', targetImg.attr('src'));
-
-                // `protected-img` クラスの場合の特別な処理
-                if (targetImg.hasClass('protected-img')) {
-                    modalImg.css('pointer-events', 'none'); // ポップアップ画像を操作不可にする
-                } else {
-                    modalImg.css('pointer-events', 'auto'); // 通常時は操作可能にする
-                }
-            }
-        }
-
-        // 外側のコンテナクリックでモーダルを開く
-        wrapper.on('click', function () {
-            const targetImg = $(this).find('.popup-img'); // コンテナ内の画像を取得
-            openModal(targetImg);
-        });
-
-        // 画像クリックでモーダルを開く
-        imgs.on('click', function (e) {
-            e.stopPropagation(); // コンテナのクリックイベントが重複しないように停止
-            const targetImg = $(this); // クリックした画像を取得
-            openModal(targetImg);
-        });
-
-        // クローズボタンを押したらモーダルを閉じる
-        closeSpan.on('click', function () {
-            modal.css({
-                'opacity': '0',
-                'visibility': 'hidden'
-            });
-        });
-
-        // 画像以外の部分をクリックしたらモーダルを閉じる
-        $(window).on('click', function (event) {
-            if ($(event.target).is(modal)) {
-                modal.css({
-                    'opacity': '0',
-                    'visibility': 'hidden'
-                });
-            }
-        });
-
-        // スクロール時にモーダルを閉じる
-        $(window).on('scroll', function () {
-            modal.css({
-                'opacity': '0',
-                'visibility': 'hidden'
-            });
-        });
-    });
-
-
-</script>
