--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         gtag('config', 'GT-NM8CV7C9');
     </script>
 
+    <!-- Google Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1208319796009273"
+        crossorigin="anonymous"></script>
+
     <!-- phantom-siita head update 25.01.13 -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
