--- a/index.html
+++ b/index.html
@@ -263,6 +263,20 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
 
             </div>
 
+            <!-- Ad start -->
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1208319796009273"
+                crossorigin="anonymous"></script>
+            <!-- default-ad -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1208319796009273"
+                data-ad-slot="1871036781" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                });
+            </script>
+            <!-- Ad end -->
+
             <footer>
                 <div class="footer-link">
                     <a href="?p=about">本サイトについて</a>
@@ -272,15 +286,6 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
                 <img src="/static/logo/tatsu-logo-no-bg.png" alt="logo" class="bottom_logo">
             </footer>
 
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1208319796009273"
-                crossorigin="anonymous"></script>
-            <!-- default-ad -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1208319796009273"
-                data-ad-slot="1871036781" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
 
         </div>
         <div id="menu_space_btm"></div>
