update img loading lazy

--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -24,19 +24,23 @@
     <p>アイコンとしての使用⭕️ アイコン以外での使用❌ 自作発言❌</p>
     <div class="phanart-container">
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" class="phanart-popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" loading="lazy"
+                class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" class="phanart-popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" loading="lazy" class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-03rinka.png" alt="凛花アイコン" class="phanart-popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-03rinka.png" alt="凛花アイコン" loading="lazy"
+                class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-04hisui.png" alt="灯翠アイコン" class="phanart-popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-04hisui.png" alt="灯翠アイコン" loading="lazy"
+                class="phanart-popup-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-05moka.png" alt="百花アイコン" class="phanart-popup-img">
+            <img src="/static/img/phanart/guoxoua/icon-05moka.png" alt="百花アイコン" loading="lazy"
+                class="phanart-popup-img">
         </div>
     </div>
 </div>
@@ -44,7 +48,7 @@
 <div class="contents_block">
     <h3>フリーヘッダー</h3>
     <p>ヘッダーとしての使用⭕️ ヘッダー以外での使用❌ 自作発言❌</p>
-    <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" class="phanart-popup-img">
+    <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" loading="lazy" class="phanart-popup-img">
     <p class="block-description">ご本人コメント</p>
     <p>使用する際はリプしてください🙇🏻‍♀️´-</p>
     <div class="tweet-container">
@@ -61,12 +65,12 @@
     </p>
     <div class="phanart-container">
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" class="phanart-popup-img"
-                style="object-position: 50% 0%; /* 左,上 */">
+            <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" loading="lazy"
+                class="phanart-popup-img" style="object-position: 50% 0%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/profile-01.png" alt="ハイネ自己紹介カード" class="phanart-popup-img"
-                style="object-position: 50% 0%; /* 左,上 */">
+            <img src="/static/img/phanart/guoxoua/profile-01.png" alt="ハイネ自己紹介カード" loading="lazy"
+                class="phanart-popup-img" style="object-position: 50% 0%; /* 左,上 */">
         </div>
     </div>
     <div class="tweet-container">
@@ -77,7 +81,8 @@
 <div class="contents_block">
     <div class="phanart-container" style="justify-content: center;">
         <div class="phanart-wrapper" style="width: 50%;">
-            <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" class="phanart-popup-img">
+            <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" loading="lazy"
+                class="phanart-popup-img">
         </div>
     </div>
     <p class="block-description">ご本人コメント</p>
@@ -87,26 +92,28 @@
 <div class="contents_block">
     <div class="phanart-container">
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/001.png" alt="" class="phanart-popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/001.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 50% 10%; /* 上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/002.png" alt="" class="phanart-popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/002.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 50% 25%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/003.png" alt="" class="phanart-popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/003.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 100% 50%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/004.png" alt="" class="phanart-popup-img protected-img"
+            <img src="/static/img/phanart/guoxoua/004.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 50% 0%; /* 左,上 */">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/005.png" alt="" class="phanart-popup-img protected-img">
+            <img src="/static/img/phanart/guoxoua/005.png" alt="" loading="lazy"
+                class="phanart-popup-img protected-img">
         </div>
         <div class="phanart-wrapper">
-            <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" class="phanart-popup-img protected-img">
+            <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" loading="lazy"
+                class="phanart-popup-img protected-img">
         </div>
     </div>
 </div>
