--- a/pages/about.html
+++ b/pages/about.html
@@ -65,3 +65,9 @@
     </p>
     <p>私については、<a href="?p=admin-profile">こちら</a> をご参照ください。</p>
 </div>
+
+<div class="contents_block">
+    <h3>ご寄付について</h3>
+    <p>
+        本サイトに対してご寄付をいただける方がいらっしゃいましたら、<a href="?p=donation">こちら</a> をご参照ください。</p>
+</div>
