--- a/pages/donation.html
+++ b/pages/donation.html
@@ -7,7 +7,16 @@
 
 <div class="contents_block">
     <div class="donation-block">
-        <a href="https://square.link/u/o79Eb2ZY" class="donation-button">ご寄付はこちら</a>
+        <a href="https://square.link/u/o79Eb2ZY" class="donation-button">
+            <svg role="img" aria-label="蝶々">
+                <use href="#butterfly"></use>
+            </svg>
+            ご寄付はこちら
+            <svg role="img" aria-label="蝶々">
+                <use href="#butterfly"></use>
+            </svg>
+        </a>
+
     </div>
 </div>
 
@@ -38,27 +47,3 @@
         寄付の際、寄付者様の個人情報が当サイトに伝わることはありません。匿名での寄付が可能で、プライバシーを守りながら支援いただけます。また、寄付完了後に送信される電子レシートを通じて、匿名で当サイトへのメッセージをお送りいただけます。ご感想やご意見をお寄せいただけると、大変励みになります。ぜひお気軽にご利用ください。
     </p>
 </div>
-
-
-<style>
-    .donation-block {
-        display: flex;
-    }
-
-    .donation-button {
-        display: block;
-        margin: 20px auto;
-        padding: 12px 24px;
-        border: #ffffff 2px solid;
-        border-radius: 25px;
-        font-size: 1.4rem;
-        text-decoration: none;
-        color: #ffffff;
-    }
-
-    .donation-button:hover {
-        animation: hover 0.1s linear forwards;
-        color: #050406;
-        background-color: #ffffff;
-    }
-</style>
