--- a/index.html
+++ b/index.html
@@ -290,11 +290,26 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
             <div id="contents">
 
             </div>
+
+            <div class="contents_block">
+                <p class="donation-text">＼このサイトが役に立ったら／</p>
+                <div class="donation-block">
+                    <a href="?p=donation" class="donation-button" style="margin-top: 0;">
+                        <svg role="img" aria-label="蝶々">
+                            <use href="#butterfly"></use>
+                        </svg>
+                        サポートする
+                        <svg role="img" aria-label="蝶々">
+                            <use href="#butterfly"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
             <footer>
                 <div class="footer-link">
                     <a href="?p=about">本サイトについて</a>
                     <a href="?p=admin-profile">管理人について</a>
-                    <a href="?p=donation">ご寄付について</a>
                     <a href="https://forms.gle/nSAq8ozNZM46TPYM7">お問い合わせ</a>
                 </div>
                 <img src="/static/logo/tatsu-logo-no-bg.png" alt="logo" class="bottom_logo">
