--- a/pages/donation.html
+++ b/pages/donation.html
@@ -44,6 +44,9 @@
         当サイトでは、決済サービス「Square」を利用して寄付を受け付けております。Squareは多くの国内店舗で導入されている信頼性の高いサービスで、クレジットカードを使用して100円から寄付が可能です。手数料は3.75%のみで、残りの金額は全て当サイトの運営資金として活用させていただきます。
     </p>
     <p>
-        寄付の際、寄付者様の個人情報が当サイトに伝わることはありません。匿名での寄付が可能で、プライバシーを守りながら支援いただけます。また、寄付完了後に送信される電子レシートを通じて、匿名で当サイトへのメッセージをお送りいただけます。ご感想やご意見をお寄せいただけると、大変励みになります。ぜひお気軽にご利用ください。
+        寄付の際、寄付者様の個人情報が当サイトに伝わることはありません。匿名での寄付が可能で、プライバシーを守りながら支援いただけます。
+    </p>
+    <p>
+        また、寄付完了後に送信される（数分から数十分かかります）電子レシートを通じて、匿名で当サイトへのメッセージをお送りいただけます。ご感想やご意見をお寄せいただけると、大変励みになります。ぜひお気軽にご利用ください。メッセージをお送りいただく先は、管理人または本サイトのX(Twitter)のDMでも問題ありません。
     </p>
 </div>
