--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -2,7 +2,7 @@
 <div id="page-description" style="display: none;">ファントムシータのファンアートを描かれている絵師様を紹介します。</div>
 
 <div class="contents_block">
-    <h1 class="glitch-text">ファントムシータ ファンアート集</h1>
+    <h1 class="keep-all-break-word glitch-text">ファントムシータ ファンアート集</h1>
     <p>絵師さんによる素敵なファンアートを紹介します！</p>
 </div>
 
